--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -68,9 +68,11 @@
             padding-bottom: 50vh;
             /* margin-bottom: 10vh; */
             opacity: 0.25;
+            border-radius: 25px;
         }
         .step.active {
             opacity: 0.9;
+            border-radius: 25px;
         }
 
         .step div {
