--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -69,10 +69,12 @@
             /* margin-bottom: 10vh; */
             opacity: 0.25;
             border-radius: 25px;
+            border: 2px solid #73AD21;
         }
         .step.active {
             opacity: 0.9;
             border-radius: 25px;
+            border: 2px solid #73AD21;
         }
 
         .step div {
