--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -79,6 +79,7 @@
             padding:  25px 50px;
             line-height: 25px;
             font-size: 13px;
+            border-radius: 25px;
         }
 
         .step img {
