--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -43,6 +43,7 @@
             padding-top: 10vh;
             padding-bottom: 10vh;
             z-index: 100;
+            width: 30vw;
         }
         .centered {
             width: 50vw;
