--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -63,7 +63,7 @@
         }
         .dark {
             color: #fafafa;
-            background-color: #444;
+            background-color: #4440000;
         }
         .step {
             padding-bottom: 50vh;
