--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -49,6 +49,9 @@
             width: 50vw;
             margin: 0 auto;
         }
+        .title {
+            font size: 26;
+        }
         .lefty {
             width: 33vw;
             margin-left: 5vw;
