--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -45,6 +45,9 @@
             z-index: 100;
             width: 25vw;
         }
+        #title {
+            font-size: 25;
+        }
         .centered {
             width: 50vw;
             margin: 0 auto;
