--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -46,7 +46,7 @@
             width: 25vw;
         }
         #title {
-            font-size: 25px;
+            font-size: 25pt;
         }
         .centered {
             width: 50vw;
