--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -73,6 +73,7 @@
             padding-bottom: 50vh;
             /* margin-bottom: 10vh; */
             opacity: 0.25;
+            font-size: 25pt;
             
         }
         .step.active {
