--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -45,6 +45,13 @@
             z-index: 100;
             width: 25vw;
             font-size: 25pt;
+            {
+            section {
+  padding: 25px 50px;
+  line-height: 25px;
+  border-bottom: 1px solid #ddd;
+  opacity: 0.75;
+  font-size: 18px;
         }
         #title {
             font-size: 25pt;
