--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -46,7 +46,7 @@
             width: 25vw;
             font-size: 25pt;
             {
-            section {
+            #section {
   padding: 25px 50px;
   line-height: 25px;
   border-bottom: 1px solid #ddd;
