--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -44,7 +44,7 @@
             padding-bottom: 10vh;
             z-index: 100;
             width: 25vw;
-            font-size: 10pt;
+            font-size: 12px;
  
         }
         #title {
