--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -48,7 +48,7 @@
  
         }
         #title {
-            font-size: 25pt;
+            font-size: 25px;
         }
         .centered {
             width: 50vw;
