--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -13,7 +13,7 @@
         body {
             margin:0; 
             padding:0; 
-            font-family: sans-serif;
+            font-family: "Open Sans";
         }
         a, a:hover, a:visited {
             color: #0071bc;
