--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -50,6 +50,7 @@
         }
         #title {
             font: "Open Sans Light";
+            font-colour: 00AB84;
             
         }
         .centered {
