--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -70,7 +70,7 @@
             background-color: #fafafa;
         }
         .dark {
-            color: #0C2340;
+            color: #fafafa;
             background-color: #4440000;
         }
         .step {
