--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -49,8 +49,8 @@
  
         }
         #title {
-            font: "Open Sans Light";
-            font-colour: 00AB84;
+            font: "Julius Sans One";
+            font-colour: #523c30;
             
         }
         .centered {
