--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -81,6 +81,7 @@
             
         }
         .step.active {
+            background-color: rgba(0,0,0,0.5);
             opacity: 0.9;
            
         }
