--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -114,6 +114,7 @@
 <script>
 var layerTypes = {
     'fill': ['fill-opacity'],
+    'transition': ["fill-opacity-transition'],
     'line': ['line-opacity'],
     'circle': ['circle-opacity', 'circle-stroke-opacity'],
     'symbol': ['icon-opacity', 'text-opacity'],
