--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -97,6 +97,9 @@
             
             width: 30%;
         }
+        .animation{
+            fadein: 3s;
+        }
 
         @media (max-width: 750px) {
             #features {
