--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -192,6 +192,12 @@ config.chapters.forEach((record, idx) => {
         var image = new Image();  
         image.src = record.image;  
         chapter.appendChild(image);
+         
+         }
+     if (record.image) {
+        var image = new Image();  
+        image.src = record.image;  
+        chapter.appendChild(image);
     }
     
     container.setAttribute('id', record.id);
