--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -195,7 +195,7 @@ config.chapters.forEach((record, idx) => {
          
          }
      if (record.image) {
-        var image = new Image();  
+        var image2 = new Image();  
         image.src = record.image;  
         chapter.appendChild(image);
     }
