--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -194,10 +194,10 @@ config.chapters.forEach((record, idx) => {
         chapter.appendChild(image);
          
          }
-     if (record.image) {
+     if (record.image2) {
         var image2 = new Image();  
-        image.src = record.image;  
-        chapter.appendChild(image);
+        image.src = record.image2;  
+        chapter.appendChild(image2);
     }
     
     container.setAttribute('id', record.id);
