--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -196,8 +196,8 @@ config.chapters.forEach((record, idx) => {
          }
      if (record.image2) {
         var image2 = new Image();  
-        image.src = record.image2;  
-        chapter.appendChild(image2);
+        image.src = record.image;  
+        chapter.appendChild(image);
     }
     
     container.setAttribute('id', record.id);
