--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -196,6 +196,11 @@ config.chapters.forEach((record, idx) => {
         var image = new Image();
         image.src = record.image;
         chapter.appendChild(image);
+          }
+      if (record.image2) {
+        var image2 = new Image();
+        image.src = record.image2;
+        chapter.appendChild(image2);
     }
 
     container.setAttribute('id', record.id);
