--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -198,7 +198,7 @@ config.chapters.forEach((record, idx) => {
         chapter.appendChild(image);
           }
       if (record.image2) {
-        var image2 = new Image();
+        var image2 = new Image2();
         image.src = record.image2;
         chapter.appendChild(image2);
     }
