--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -198,8 +198,8 @@ config.chapters.forEach((record, idx) => {
         chapter.appendChild(image);
           }
       if (record.image2) {
-        var image2 = new Image2();
-        image.src = record.image2;
+        var image2 = new Image();
+        image.src = record.image;
         chapter.appendChild(image2);
     }
 
