--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -6,14 +6,14 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cinzel+Decorative" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Asap+Condensed" />
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
     <style>
          body {
             margin:0; 
             padding:0; 
-            font-family: "Cinzel Decorative";
+            font-family: "Asap Condensed";
         }
         a, a:hover, a:visited {
             color: #0071bc;
@@ -49,7 +49,7 @@
  
         }
         #title {
-            font: "Cinzel Decorative";
+            font: "Asap Condensed";
             font-colour: #523c30;
             
         }
