--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -51,6 +51,7 @@
         #title {
             font: "Noto Sans JP";
             font-colour: #523c30;
+            font-size: 25px;
             
         }
         .centered {
