--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -200,8 +200,8 @@ config.chapters.forEach((record, idx) => {
           }
     
       if (record.image) {
-        var image2 = new Image();
-        image.src = record.image;
+        var image2 = new Image2();
+        image.src = record.image2;
         chapter.appendChild(image);
     }
 
