--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -50,7 +50,7 @@
         }
         #title {
             font: "Noto Sans JP";
-            font-colour: #523c30;
+            font-colour: #ffce00;
             font-size: 32px;
             
         }
