--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -48,6 +48,11 @@
             font-size: 12px;
  
         }
+        #h1 {
+  font-weight: bold;
+  
+  font-size: 40px;
+}
         #title {
             font: "Noto Sans JP";
             font-colour: #ffce00;
