--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -207,7 +207,7 @@ config.chapters.forEach((record, idx) => {
     }
       if (record.image) {
         var image = new Image();
-        image.src = record.image;
+        image.src2 = record.image;
         chapter.appendChild(image);
           }
     
