--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -55,6 +55,7 @@
 }
         #title {
             font: "Noto Sans JP";
+            text-align: left;
             font-colour: #ffce00;
             font-size: 32px;
             
