--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -29,7 +29,7 @@
             margin: 3vh auto;
             width: 90vw;
             padding: 2vh;
-            text-align: center;
+            text-align: left;
         }
         #footer {
             width: 100%;
