--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -53,7 +53,7 @@
   
   font-size: 40px;
 }
-        #title {
+        #subtitle {
             font: "Noto Sans JP";
             text-align: left;
             font-colour: #ffce00;
