--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -48,9 +48,8 @@
             font-size: 12px;
  
         }
-        #h1 {
+        #title {
   font-weight: bold;
-  
   font-size: 40px;
 }
         #subtitle {
