--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -159,7 +159,7 @@ features.setAttribute('id', 'features');
 var header = document.createElement('div');
 
 if (config.title) {
-    var titleText = document.createElement('h1');
+    var titleText = document.createElement('45px');
     titleText.innerText = config.title;
     header.appendChild(titleText);
 }
