--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -211,8 +211,8 @@ config.chapters.forEach((record, idx) => {
         chapter.appendChild(image);
           }
      }
-      if (record.image) {
-        var image = new Image(2);
+      if (record.image2) {
+        var image = new Image();
         image.src = record.image;
         chapter.appendChild(image);
           }
