--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -210,6 +210,13 @@ config.chapters.forEach((record, idx) => {
         image.src = record.image;
         chapter.appendChild(image);
           }
+    
+  
+      if (record.image) {
+        var image = new Image();
+        image.src = record.image2;
+        chapter.appendChild(image);
+          }
   
     
 
