--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -209,6 +209,10 @@ config.chapters.forEach((record, idx) => {
         var image = new Image();
         image.src = record.image;
         chapter.appendChild(image);
+         
+         if (record.image2) {
+        var image = new Image();
+        image.src = record.image2;
           
    
           }
