--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -210,7 +210,7 @@ config.chapters.forEach((record, idx) => {
         image.src = record.image;
         chapter.appendChild(image);
          
-         if (record.image2) {
+         if (record.image) {
         var image = new Image();
         image.src = record.image2;
           
