--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -214,7 +214,7 @@ config.chapters.forEach((record, idx) => {
      }
     if (record.image) {
         var image2 = new Image();
-        image.src = record.image;
+        image.src = record.image2;
         
         chapter.appendChild(image);
           
