--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -211,7 +211,7 @@ config.chapters.forEach((record, idx) => {
         chapter.appendChild(image);
           
     if (record.image) {
-        var image = new Image();
+        var image2 = new Image();
         image.src = record.image2;
         chapter.appendChild(image);
           }
