--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -60,6 +60,7 @@
         #title {
   font-weight: bold;
   font-size: 40px;
+             font-colour: #ffce00;
 }
         #subtitle {
             font: "Noto Sans JP";
