--- a/mapboxstory/index.html
+++ b/mapboxstory/index.html
@@ -6,14 +6,14 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Sans+JP:100" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Archivo" />
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/scrollama"></script>
     <style>
          body {
             margin:0; 
             padding:0; 
-            font-family: "Noto Sans JP";
+            font-family: "Archivo";
         }
         a, a:hover, a:visited {
             color: #0071bc;
@@ -63,7 +63,7 @@
              font-colour: #ffce00;
 }
         #subtitle {
-            font: "Noto Sans JP";
+            font: "Archivo";
             text-align: left;
             font-colour: #ffce00;
             font-size: 50px;
